Homework_3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-service
  labels:
    app: hw3-svc
spec:
  selector:
    app: hw3app
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      # smirnov_aa: this port is gateway port for outer clients
      port: 80
      # smirnov_aa: this port is inner container port, that application uses
      targetPort: 8000
