Homework_3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3app-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Exact
        backend:
          service:
            name: hw3app-service
            port:
              number: 80
